// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiBasicButton is rendered with basic class 1`] = `
<button
  class="kuiButton kuiButton--basic"
>
  <span />
</button>
`;

exports[`KuiButton Baseline is rendered 1`] = `
<button
  className="kuiButton"
  onClick={[Function]}
  type={null}
  value={null}
>
  <span />
</button>
`;

exports[`KuiButton Props children is rendered 1`] = `
<button
  className="kuiButton"
  onClick={[Function]}
  type={null}
  value={null}
>
  <span>
    <span>
      Hello
    </span>
  </span>
</button>
`;

exports[`KuiButton Props className renders the classes 1`] = `
<button
  className="kuiButton testClass1 testClass2"
  onClick={[Function]}
  type={null}
  value={null}
>
  <span />
</button>
`;

exports[`KuiButton Props href changes the element from a button to an anchor tag 1`] = `
<a
  className="kuiButton"
  href="#"
  onClick={[Function]}
  type={null}
  value={null}
>
  <span />
</a>
`;

exports[`KuiButton Props icon is rendered with children 1`] = `
<button
  className="kuiButton kuiButton--iconText"
  onClick={[Function]}
  type={null}
  value={null}
>
  <span>
    Icon
    <span>
      Hello
    </span>
  </span>
</button>
`;

exports[`KuiButton Props icon is rendered without children 1`] = `
<button
  className="kuiButton kuiButton--iconText"
  onClick={[Function]}
  type={null}
  value={null}
>
  <span>
    Icon
  </span>
</button>
`;

exports[`KuiButton Props isDisabled sets the disabled attribute 1`] = `
<button
  className="kuiButton"
  disabled={true}
  onClick={[Function]}
  type={null}
  value={null}
>
  <span />
</button>
`;

exports[`KuiButton Props isIconOnRight moves the icon to the right 1`] = `
<button
  className="kuiButton kuiButton--iconText"
  onClick={[Function]}
  type={null}
  value={null}
>
  <span>
    <span>
      Hello
    </span>
    Icon
  </span>
</button>
`;

exports[`KuiButton Props isLoading doesn't render the icon prop 1`] = `
<button
  className="kuiButton kuiButton--iconText"
  onClick={[Function]}
  type={null}
  value={null}
>
  <span>
    <KuiLoadingButtonIcon />
  </span>
</button>
`;

exports[`KuiButton Props isLoading renders a spinner 1`] = `
<button
  className="kuiButton kuiButton--iconText"
  onClick={[Function]}
  type={null}
  value={null}
>
  <span>
    <KuiLoadingButtonIcon />
  </span>
</button>
`;

exports[`KuiButton Props isSubmit changes the element from a button to an input[type=submit] 1`] = `
<input
  className="kuiButton"
  onClick={[Function]}
  type="submit"
/>
`;

exports[`KuiButton Props isSubmit doesn't throw an error if it receives string children 1`] = `
<input
  className="kuiButton"
  onClick={[Function]}
  type="submit"
  value="Hello"
/>
`;

exports[`KuiButton Props isSubmit throws an error if it receives icon 1`] = `
"KuiButton with isSubmit prop set to true can only accept string children, and can't
        display icons. This is because input is a void element and can't contain children."
`;

exports[`KuiButton Props isSubmit throws an error if it receives non-string children 1`] = `
"KuiButton with isSubmit prop set to true can only accept string children, and can't
        display icons. This is because input is a void element and can't contain children."
`;

exports[`KuiButton Props target is rendered 1`] = `
<button
  className="kuiButton"
  onClick={[Function]}
  target="_blank"
  type={null}
  value={null}
>
  <span />
</button>
`;

exports[`KuiButton Props testSubject is rendered 1`] = `
<button
  className="kuiButton"
  data-test-subj="test subject string"
  onClick={[Function]}
  type={null}
  value={null}
>
  <span />
</button>
`;

exports[`KuiDangerButton is rendered with danger class 1`] = `
<button
  class="kuiButton kuiButton--danger"
>
  <span />
</button>
`;

exports[`KuiHollowButton is rendered with hollow class 1`] = `
<button
  class="kuiButton kuiButton--hollow"
>
  <span />
</button>
`;

exports[`KuiPrimaryButton is rendered with primary class 1`] = `
<button
  class="kuiButton kuiButton--primary"
>
  <span />
</button>
`;
